--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Sanctuary Daggy Partial.Lenses Ramda Redux JS" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>Sanctuary Sandbox</title>
+  <title>FPJS</title>
 </head>
 
 <body>
